test/error/While.c1
void main()
{
	break;
	continue;
	if (true) break;
	while (true) continue;
}